fix footer marqee text alignment

--- a/src/styles/_footer.css
+++ b/src/styles/_footer.css
@@ -263,19 +263,20 @@
   width: 100vw;
   overflow: hidden;
   white-space: nowrap;
-  padding-top: 5.8125rem;
+  padding-top: 7.8125rem;
 }
 .footer-large-text h1 {
   font-family: var(--font-family-helvetica-neue);
   font-size: 13.5449375rem;
   font-weight: var(--font-weight-light);
-  line-height: normal;
+  line-height: 90%;
   letter-spacing: -0.40635rem;
   color: var(--primary-blue);
   white-space: nowrap;
   margin: 0;
   padding: 0;
   display: inline-block;
+  padding-bottom: 1.9rem;
 }
 .footer-marquee-track {
   display: inline-flex;
